--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -87,7 +87,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <a class="navbar-brand"  routerLink="/homepage">
-            <img src="../../../assets/images/Link_logo_vertical_color_Light_RGB.png" alt="">
+            <img src="/../../../assets/images/Link_logo_vertical_color_Light_RGB.png" alt="">
           </a>
         </div>
      </div>
@@ -105,7 +105,7 @@
       </a></li>
         <li class="nav-item"><a  class="nav-link link-light px-2">
          
-            <img src="../../../assets/images/98681.jpg" alt="mdo" width="32" height="32" class="rounded-circle">
+            <img src="/../../../assets/images/98681.jpg" alt="mdo" width="32" height="32" class="rounded-circle">
             USER NAME
         
         </a></li>
