--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/../assets/images/next.png" class="d-block w-100" alt="...">
+      <img src="assets/images/next.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Al Foundation</h5>
         <p>is focused on inspiring the next generation of  kids Healthcare professionals.</p>
@@ -17,7 +17,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/../assets/images/next.png" class="d-block w-100" alt="...">
+      <img src="assets/images/next.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Al Foundation</h5>
         <p>is focused on inspiring the next generation of  kids Healthcare professionals.</p>
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/../assets/images/next.png" class="d-block w-100" alt="...">
+      <img src="assets/images/next.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Al Foundation</h5>
         <p>is focused on inspiring the next generation of  kids Healthcare professionals.</p>
